# c-byte-based-protocol

./: CMakeLists.txt  README.md  errors.c  errors.h  handle_connection.c  handle_connection.h  key_manager.c  key_manager.h  main.c  service.c  service.h  service_manager.c  service_manager.h  socket_pool.c  socket_pool.h  socket_queue.c  socket_queue.h
python/: client.py  server.py
